2011-11-11, v0.2
	* Add support for Image Properties
	* Add new FixPartitionTable hook

2011-10-20, v0.1.2

2011-10-17, v0.1.1
	* Fix a bug in ChangePassword task
	* Add timestamps in output of the tasks

2011-10-04, v0.1
	* Initial release