@@ -51,7 +51,7 @@
 
 # HELPER_EXTRA_PKGS: Extra packages that will need to be supplied
 # to debootstrap to make the resulting helper image workable
-# HELPER_EXTRA_PKGS="linux-image-amd64,e2fsprogs,ntfs-3g,ntfsprogs,xmlstarlet,python,parted"
+# HELPER_EXTRA_PKGS="linux-image-amd64,e2fsprogs,ntfs-3g,ntfsprogs,xmlstarlet,python,parted,reglookup,chntpw"
 
 # HELPER_MIRROR: Debian mirror to use with debootstrap. Using a mirror close to
 # you will speed up the whole debootstraping process. By default we do not
